@@ -38,11 +38,8 @@ void HID_Device_ProcessControlRequest(USB_ClassInfo_HID_Device_t* const HIDInter
 	if (!(Endpoint_IsSETUPReceived()))
 	  return;
 	  
-	if ((USB_ControlRequest.wIndex   != HIDInterfaceInfo->Config.InterfaceNumber) &&
-	    (USB_ControlRequest.bRequest != REQ_SetIdle))
-	{
-		return;
-	}
+	if (USB_ControlRequest.wIndex != HIDInterfaceInfo->Config.InterfaceNumber)
+	  return;
 
 	switch (USB_ControlRequest.bRequest)
 	{
@@ -106,15 +103,11 @@ void HID_Device_ProcessControlRequest(USB_ClassInfo_HID_Device_t* const HIDInter
 		case REQ_SetIdle:
 			if (USB_ControlRequest.bmRequestType == (REQDIR_HOSTTODEVICE | REQTYPE_CLASS | REQREC_INTERFACE))
 			{
-				if ((USB_ControlRequest.wIndex         == HIDInterfaceInfo->Config.InterfaceNumber) ||
-				    (USB_ControlRequest.wValue & 0xFF) == 0)
-				{
-					Endpoint_ClearSETUP();
+				Endpoint_ClearSETUP();
 					
-					HIDInterfaceInfo->State.IdleCount = ((USB_ControlRequest.wValue & 0xFF00) >> 6);
+				HIDInterfaceInfo->State.IdleCount = ((USB_ControlRequest.wValue & 0xFF00) >> 6);
 					
-					Endpoint_ClearStatusStage();
-				}
+				Endpoint_ClearStatusStage();
 			}
 			
 			break;
