@@ -81,8 +81,8 @@ uint8_t USB_ProcessHIDReport(const uint8_t* ReportData, uint16_t ReportSize, HID
 				if (CurrStateTable == &StateTable[HID_STATETABLE_STACK_DEPTH - 1])
 				  return HID_PARSE_HIDStackOverflow;
 	
-				memcpy(CurrStateTable,
-				       (CurrStateTable + 1),
+				memcpy((CurrStateTable + 1),
+				       CurrStateTable,
 				       sizeof(HID_ReportItem_t));
 
 				CurrStateTable++;
@@ -122,8 +122,13 @@ uint8_t USB_ProcessHIDReport(const uint8_t* ReportData, uint16_t ReportSize, HID
 				break;
 			case (TYPE_GLOBAL | TAG_GLOBAL_REPORTID):
 				CurrStateTable->ReportID                    = ReportItemData;
-				BitOffsetIn  = 0;
-				BitOffsetOut = 0;
+				ParserData->UsingMultipleReports = true;
+				BitOffsetIn      = 0;
+				BitOffsetOut     = 0;
+
+				#if defined(HID_ENABLE_FEATURE_PROCESSING)
+				BitOffsetFeature = 0;
+				#endif
 				break;
 			case (TYPE_LOCAL | TAG_LOCAL_USAGE):
 				if (UsageStackSize == HID_USAGE_STACK_DEPTH)
